--- a/adminDashboard/.env
+++ b/adminDashboard/.env
@@ -1,2 +1,2 @@
 VITE_RAPIDAPIKEY="65e3ab5755mshddcfb37a4094a9ep10b89cjsn22f923dd2fca"
-VITE_DB_URL="http://localhost:3000"
+VITE_DB_URL="https://fantasyserver.azurewebsites.net"
