--- a/androidApk/.env
+++ b/androidApk/.env
@@ -1,4 +1,1 @@
-#EXPO_PUBLIC_API_URL="10.65.3.69"
-EXPO_PUBLIC_API_URL="192.168.29.219"
-#EXPO_PUBLIC_API_URL="10.224.9.225"
-#EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cmF0aW9uYWwtdHVya2V5LTUxLmNsZXJrLmFjY291bnRzLmRldiQ
+EXPO_PUBLIC_API_URL="https://fantasyserver.azurewebsites.net/api"
