--- a/androidApk/app.json
+++ b/androidApk/app.json
@@ -17,7 +17,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/apklogo.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.decoderx.fantasyAPP"
