fix bug of crashing apk after build due to rn-svg and page-viewer

--- a/androidApk/eas.json
+++ b/androidApk/eas.json
@@ -5,12 +5,15 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_API_URL": "https://fantasyserver.azurewebsites.net/api/"
+      }
     },
     "preview": {
       "distribution": "internal",
       "env":{
-        "EXPO_PUBLIC_API_URL":"https://fantasyserver.azurewebsites.net/api"
+        "EXPO_PUBLIC_API_URL":"https://fantasyserver.azurewebsites.net/api/"
 
       }
     },
