--- a/androidApk/.env
+++ b/androidApk/.env
@@ -1,1 +1,1 @@
-EXPO_PUBLIC_API_URL="https://fantasyserver.azurewebsites.net/api"
+EXPO_PUBLIC_API_URL="https://fantasyserver.azurewebsites.net/api/"
