--- a/androidApk/package.json
+++ b/androidApk/package.json
@@ -14,9 +14,11 @@
     "@expo/metro-runtime": "~3.2.3",
     "@react-native/metro-config": "^0.75.4",
     "@react-navigation/material-top-tabs": "^6.6.14",
+    "@sentry/react-native": "~5.24.3",
     "axios": "^1.7.7",
     "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.10",
     "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "~13.0.2",
@@ -38,9 +40,12 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "15.2.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.0-rc.2",
+    "react-native-pager-view": "6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
