--- a/androidApk/package.json
+++ b/androidApk/package.json
@@ -14,11 +14,9 @@
     "@expo/metro-runtime": "~3.2.3",
     "@react-native/metro-config": "^0.75.4",
     "@react-navigation/material-top-tabs": "^6.6.14",
-    "@sentry/react-native": "~5.24.3",
     "axios": "^1.7.7",
     "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.10",
     "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "~13.0.2",
@@ -34,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-dimensions": "^3.1.1",
@@ -44,8 +43,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
-    "zustand": "^5.0.0-rc.2",
-    "react-native-pager-view": "6.3.0"
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
