--- a/adminDashboard/.env
+++ b/adminDashboard/.env
@@ -1,3 +1,3 @@
 VITE_RAPIDAPIKEY="2be0fc4204msh321c7199db88bdap1904a1jsn694e08440af2"
-#VITE_DB_URL="https://fantasyserver.azurewebsites.net"
-VITE_DB_URL="http://localhost:3000"
+VITE_DB_URL="https://fantasyserver.azurewebsites.net"
+#VITE_DB_URL="http://localhost:3000"
